drvdir = $(VICE_DATADIR)/DRIVES

drv_DATA = \
	dos1540-325302+3-01.bin \
	dos1541-325302-01+901229-05.bin \
	dos1551-318008-01.bin \
	dos1541ii-251968-03.bin \
	dos1570-315090-01.bin \
	dos1571-310654-05.bin \
	dos1571cr-318047-01.bin \
	dos1581-318045-02.bin \
	dos2031-901484-03+05.bin \
	dos1001-901887+8-01.bin \
	dos2040-901468-06+07.bin \
	dos3040-901468-11-13.bin \
	dos4040-901468-14-16.bin \
	dos9000-300516+7-revC.bin

EXTRA_DIST = $(drv_DATA)
