
palettes = \
	amber.vpl \
	green.vpl \
	white.vpl

roms = \
	basic1 \
	basic2 \
	basic4 \
	kernal1 \
	kernal2 \
	kernal4 \
	edit1g \
	edit2g \
	edit2b \
	edit4g40 \
	edit4b40 \
	edit4b80 \
	chargen \
	chargen.de

keymaps = \
	amiga_bgrs.vkm \
	amiga_buks.vkm \
	beos_bgrs.vkm \
	beos_buks.vkm \
	dos_bgrs.vkm \
	dos_buks.vkm \
	os2.vkm \
	os2_40.vkm \
	RObusi.vkm \
	ROgrph.vkm \
	win_shortcuts.vsc \
	win_sym_gr.vkm \
	win_sym_uk.vkm \
	x11_bdep.vkm \
	x11_bdes.vkm \
	x11_bgrs.vkm \
	x11_buks.vkm

romsets = \
	rom1g.vrs \
	rom2b.vrs \
	rom2g.vrs \
	rom4b40.vrs \
	rom4b80.vrs \
	rom4g40.vrs

petdir = $(VICEDIR)/PET

pet_DATA = $(keymaps) $(roms) $(palettes) $(romsets)

EXTRA_DIST = $(pet_DATA)

